--- a/client-react/public/index.html
+++ b/client-react/public/index.html
@@ -57,6 +57,7 @@
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
+    <script src="https://unpkg.com/popper.js@1/dist/umd/popper.min.js"></script>
     <div id="root"></div>
     <!--
       This HTML file is a template.
