--- a/client-react/public/index.html
+++ b/client-react/public/index.html
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <script src="https://apis.google.com/js/platform.js" async defer></script>
+    <meta name="google-signin-client_id" content="267223352789-mgua8d16tlb5trut6ki45ce6ba8dud29.apps.googleusercontent.com"></meta>
+
+    
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://unpkg.com/tailwindcss@2.2.19/dist/tailwind.min.css"/>
     <!--Replace with your tailwind.css once created-->
@@ -57,7 +61,6 @@
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <script src="https://unpkg.com/popper.js@1/dist/umd/popper.min.js"></script>
     <div id="root"></div>
     <!--
       This HTML file is a template.
